--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -5,109 +5,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'chat/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>LESSgo</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'chat/style.css' %}">
+    <script src="{% static 'chat/script.js' %}"></script>
+    <title>RoomieChat</title>
 </head>
 
-
 <body>
-    <!--    <div class="whole-container">
-        <nav class="navbar navbar-dark">
-            <i class="medium material-icons" style="color: black;">home</i>
-            <a class="navbar-brand" href="" style="color: black;">ChatRoom</a>
-            
-            <a class="btn-floating btn-large waves-effect waves-light red" type="button" data-toggle="dropdown"><i class="material-icons">add</i></a>
-
-                <ul class="dropdown-menu">
-                  <li><a href="#">HTML</a></li>
-                  <li><a href="#">CSS</a></li>
-                  <li><a href="#">JavaScript</a></li>
-                </ul>
-        </nav>
-        <div class="inner-container">
-            <ul class="list-group" style="list-style-type:none">
-                {% for user in user_list %}
-                <div class="inner-container user-block">
-                    <li><a href="/chat/{{user.user_id}}">{{user.message_last}}</a></li>
-                </div>
-                {% endfor %}
+    <div class="container" id="whole_body">
+        <nav>
+            <ul id="dropdown1" class="dropdown-content">
+                <li onclick="myfuct()"><a>A-Z</a></li>
+                <li onclick="myfuctrev()"><a>Z-A</a></li>
+                <li onclick="myfuctshf()" class="shuffleBtn"><a>random</a></li>
             </ul>
-           
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo center">Logo</a>
+                <ul class=" ">
+                    <li class="right"><a href="#!" class="dropdown-trigger" data-target="dropdown1"><i
+                                class="material-icons">dehaze</i></a></li>
+                    <li><a href="http://www.w3schools.com"><i class="material-icons left">home</i></a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="">
+            <ul class="collection shuffle-list-items" id="list">
+                {% for user in user_list %}
+                    <li class="collection-item"><a href="/chat/{{user.user_id}}">{{user.user_id}}</a></li>
+                {% endfor %}
+                <li class="collection-item" id="1"><a href="a.html?fruit=apple">Alvin</a></li>
+                <li class="collection-item" id="2">theodore</li>
+                <li class="collection-item" id="3">Simon</li>
+                <li class="collection-item" id="4">jack</li>
+                <li class="collection-item" id="5">spencer</li>
+                <li class="collection-item" id="6">rock</li>
+            </ul>
         </div>
+
     </div>
--->
-    <p>Click the button to sort the list ascending (A to Z):</p>
-    <p>Click again to sort the list descending (Z to A):</p>
 
-    <button onclick="sortListDir()">Sort</button>
-
-    <ul id="id01">
-        <li>Oslo</li>
-        <li>Stockholm</li>
-        <li>Helsinki</li>
-        <li>Berlin</li>
-        <li>Rome</li>
-        <li>Madrid</li>
-    </ul>
-
-    <script>
-        function sortListDir() {
-            var list, i, switching, b, shouldSwitch, dir, switchcount = 0;
-            list = document.getElementById("id01");
-            switching = true;
-            // Set the sorting direction to ascending:
-            dir = "asc";
-            // Make a loop that will continue until no switching has been done:
-            while (switching) {
-                // start by saying: no switching is done:
-                switching = false;
-                b = list.getElementsByTagName("LI");
-                // Loop through all list-items:
-                for (i = 0; i < (b.length - 1); i++) {
-                    //start by saying there should be no switching:
-                    shouldSwitch = false;
-                    /* check if the next item should switch place with the current item,
-                    based on the sorting direction (asc or desc): */
-                    if (dir == "asc") {
-                        if (b[i].innerHTML.toLowerCase() > b[i + 1].innerHTML.toLowerCase()) {
-                            /* if next item is alphabetically lower than current item,
-                            mark as a switch and break the loop: */
-                            shouldSwitch = true;
-                            break;
-                        }
-                    } else if (dir == "desc") {
-                        if (b[i].innerHTML.toLowerCase() < b[i + 1].innerHTML.toLowerCase()) {
-                            /* if next item is alphabetically higher than current item,
-                            mark as a switch and break the loop: */
-                            shouldSwitch = true;
-                            break;
-                        }
-                    }
-                }
-                if (shouldSwitch) {
-                    /* If a switch has been marked, make the switch
-                    and mark that a switch has been done: */
-                    b[i].parentNode.insertBefore(b[i + 1], b[i]);
-                    switching = true;
-                    // Each time a switch is done, increase switchcount by 1:
-                    switchcount++;
-                } else {
-                    /* If no switching has been done AND the direction is "asc",
-                    set the direction to "desc" and run the while loop again. */
-                    if (switchcount == 0 && dir == "asc") {
-                        dir = "desc";
-                        switching = true;
-                    }
-                }
-            }
-        }
-    </script>
+   
 </body>
 
 
